# student-performance-regression

./: README.md  pyproject.toml
summative/API/: prediction.py  preprocessing.py  requirements.txt
summative/FlutterApp/: README.md  pubspec.yaml
summative/FlutterApp/android/app/: build.gradle.kts
summative/FlutterApp/android/app/src/main/: AndroidManifest.xml
summative/FlutterApp/android/app/src/main/kotlin/com/example/student_truck/: MainActivity.kt
summative/FlutterApp/ios/Runner/: Info.plist
summative/FlutterApp/ios/Runner.xcodeproj/: project.pbxproj
summative/FlutterApp/lib/: main.dart
summative/FlutterApp/lib/models/: student_input.dart
summative/FlutterApp/lib/screens/: predictor_screen.dart
summative/FlutterApp/lib/services/: prediction_service.dart
summative/FlutterApp/lib/theme/: app_theme.dart
summative/FlutterApp/lib/widgets/: form_widgets.dart  result_gauge.dart  result_sheet.dart
summative/FlutterApp/linux/: CMakeLists.txt
summative/FlutterApp/linux/runner/: my_application.cc
summative/FlutterApp/macos/Runner.xcodeproj/: project.pbxproj
summative/FlutterApp/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
summative/FlutterApp/macos/Runner/Configs/: AppInfo.xcconfig
summative/FlutterApp/test/: widget_test.dart
summative/FlutterApp/web/: index.html  manifest.json
summative/FlutterApp/windows/: CMakeLists.txt
summative/FlutterApp/windows/runner/: Runner.rc  main.cpp
summative/linear_regression/: best_model.pkl  model_meta.pkl  multivariate.ipynb  scaler.pkl
