[project]
name = "linear-regression-model"
version = "1.0.0"
description = "Student Academic Performance Prediction: Linear Regression (SGD & OLS) / Random Forest / Decision Tree regression models, served via FastAPI, consumed by a Flutter mobile app."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "joblib>=1.4.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
notebook = [
    "jupyter",
    "matplotlib",
    "seaborn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["summative"]
